syntax="proto3";
package blend.services.user_mgmt.proto;

option go_package="blendwith.me/services/user_mgmt/pb";

message CreateUserRequest {
    string uid = 1;
    string phone = 2;
    string email = 3;
    string display_name = 4;
    string bio = 5;
}